--- a/named-entity-recognition/ref.bib
+++ b/named-entity-recognition/ref.bib
@@ -1,1 +1,14 @@
  
+@inproceedings{tagger16,
+  author    = {Guillaume Lample and
+               Miguel Ballesteros and
+               Sandeep Subramanian and
+               Kazuya Kawakami and
+               Chris Dyer},
+  title     = {Neural Architectures for Named Entity Recognition},
+  booktitle = {{NAACL} {HLT} 2016, The 2016 Conference of the North American Chapter
+               of the Association for Computational Linguistics: Human Language Technologies,
+               San Diego California, USA, June 12-17, 2016},
+  pages     = {260--270},
+  year      = {2016}
+}
