--- a/named-entity-recognition/main.tex
+++ b/named-entity-recognition/main.tex
@@ -172,6 +172,7 @@ CRF-NER  & 95.05 & 94.30 & 94.67 & 98.17\\
 % accuracy:  99.60%; precision:  98.02%; recall:  98.41%; FB1:  98.21
 LSTM-NER          & 98.02 & 98.41 & 98.21 & 99.60\\ 
 \hline
+%accuracy:  99.23%; precision:  96.18%; recall:  96.95%; FB1:  96.57
 LSTM-NER-TWO & 95.96 & 96.94 & 96.45 & 98.95 \\
 
  
